--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,9 +1,6 @@
-extent.reporter.html.start=true
-extent.reporter.html.config=
-extent.reporter.html.out=test-output/HtmlReport/ExtentHtml.html
-
-
-
-
-
-
+basefolder.name=test-output/ExtentReport
+basefolder.datetimepattern=d-MMM-YY HH-mm-ss
+extent.reporter.spark.start=true
+extent.reporter.spark.out=test-output/SparkReport/Spark.html
+screenshot.dir=test-output/SparkReport/screenshots
+screenshot.rel.path=./screenshots/
